--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <button id="startBtn">Start Game</button>
                 <button id="pauseBtn">Pause</button>
                 <button id="restartBtn">Restart</button>
+                <button id="saveButton">Save Game</button>
+                <button id="loadButton">Load Game</button>
                 <form id="playerForm">
                     <label for="playerName">Enter Your Name: </label>
                     <input type="text" id="playerName" name="playerName" placeholder="Player Name">
